Fix CI and tooltip alignment

--- a/packages/pipeline-editor/style/index.css
+++ b/packages/pipeline-editor/style/index.css
@@ -287,7 +287,7 @@ td {
 }
 
 .elyra-Tooltip {
-  top: 92px;
+  top: 90px;
   visibility: hidden;
   opacity: 100%;
 }
